--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,20 +7,19 @@ environment:
   sdk: ^3.5.0
 
 dependencies:
+  bloc: ^9.0.0
+  bloc_concurrency: ^0.3.0
+  collection: ^1.19.1
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
-
-  # State Mgmt
-  bloc: ^9.0.0
   flutter_bloc: ^9.1.0
-
-  # Localization
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
-
-  # Helpers
   logger: ^2.5.0
+  meta: ^1.16.0
+  salomon_bottom_bar: ^3.3.2
 
 dev_dependencies:
   bloc_test: ^10.0.0
