--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,9 @@
 include: package:very_good_analysis/analysis_options.6.0.0.yaml
+analyzer:
+  exclude:
+    - coverage/**
+    - packages/**
+
 linter:
   rules:
     public_member_api_docs: false
