--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_bloc: ^9.1.0
   flutter_localizations:
     sdk: flutter
+  font_awesome_flutter: ^10.8.0
   intl: ^0.19.0
   logger: ^2.5.0
   meta: ^1.16.0
@@ -27,6 +28,10 @@ dev_dependencies:
     sdk: flutter
   mocktail: ^1.0.4
   very_good_analysis: ^7.0.0
+
+dependency_overrides:
+  font_awesome_flutter:
+    path: packages/font_awesome_flutter
 
 flutter:
   uses-material-design: true
